# envelope

./: .buildconfig  .editorconfig  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README  README.md  com.github.cjfloss.envelope.json  config.h.cmake  meson.build
data/: CMakeLists.txt  com.github.cjfloss.envelope.appdata.xml.in  com.github.cjfloss.envelope.desktop.in  com.github.cjfloss.envelope.gschema.xml  envelope.desktop  meson.build  org.envelope.envelope.gschema.xml  post_install.py
debian/: changelog  control  copyright  envelope.install  rules
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.cjfloss.envelope.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+163 more)
po/extra/: LINGUAS  POTFILES  de.po  extra.pot  fr.po  lt.po  nl.po  pl.po  pt.po
src/: Build.vala  CMakeLists.txt  Envelope.vala  envelope.vala  main.vala  meson.build
src/database/: Database.vala  DatabaseCursor.vala  DatabaseError.vala  DatabaseManager.vala  SQLQueries.vala  tables.vala
src/dialog/: AbstractDialog.vala  AddAccountDialog.vala  AddCategoryDialog.vala  ImportTransactionsDialog.vala
src/model/: Account.vala  Budget.vala  Category.vala  Merchant.vala  MonthlyCategory.vala  Payee.vala  Transaction.vala
src/service/: AccountManager.vala  BudgetManager.vala  CategoryStore.vala  Error.vala  Importer.vala  MerchantStore.vala  PayeeStore.vala  QIFImporter.vala
src/service/settings/: SavedState.vala
src/util/: Date.vala  String.vala  format.vala  string.vala
src/vapi/: config.vapi  monetary.vapi
src/view/: AccountWelcomeScreen.vala  BudgetOverview.vala  CategoryProperties.vala  FilterView.vala  Sidebar.vala  TransactionView.vala  WelcomeScreen.vala
src/widget/: AbstractPopoverCellRenderer.vala  CellRendererCategoryPicker.vala  CellRendererDatePicker.vala  CellRendererPopoverContainer.vala  CellRendererTextCompletion.vala  CellRendererUpdatable.vala
src/window/: AddAccountDialog.vala  MainWindow.vala
tests/: CMakeLists.txt  QIFImporterTest.vala  meson.build  sample.qif  transactions.sql
